Really fixed overflow

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -78,11 +78,12 @@ nav {
 	.inner {
 		width: 100%;
 		margin: auto;
-		overflow-x: hidden;
 	}
 
 	.inner > div {
 		@include make-row();
+		margin-left: 0;
+		margin-right: 0;
 	}
 
 	.logo img {
@@ -96,7 +97,6 @@ nav {
 	}
 
 	.text {
-		overflow: visible;
 		padding-top: 2em;
 		@media (min-width: $screen-xs-min) and (max-width: $screen-xs-max) {
 			padding-top: 1em;
@@ -111,7 +111,6 @@ nav {
 		h2 small {
 			padding: 0;
 			font-size: 1.25em;
-			overflow: visible;
 		}
 	}
 
